2013-11-18  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/osdep/unix/hostdisk.c (grub_util_make_temporary_file):
	Handle errors from mkstemp.
	(grub_util_make_temporary_dir): Handle errors from mkdtemp.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: Use -cdrom and don't force cdrom
	on primary master on pseries.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/videotest_checksum.c: Don't reload unifont if it's
	already loaded. This saves memory needed for tests,

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.c (main): Fix a typo to make yeeloong part
	work again.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/terminfo.c (grub_cmd_terminfo): Fix a typo to make -g
	work again.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell.in: For powerpc tests put the CD-ROM as primary
	master since with some combinations of qemu and firmware only primary
	IDE channel is available.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/gfxterm_menu.c: Skip high-resolution tests on
	low-memory platforms where we don't have enough memory for them.
	* grub-core/tests/videotest_checksum.c: Likewise.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/tests/cmdline_cat_test.c: Don't reload unifont if it's
	already loaded. This saves memory needed for tests,

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of install lists.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/sparc64/setjmp.S: Force spilling of current window.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	On i386-ieee1275 we run in paged mode. So we need to explicitly map
	the devices before accessing them.

2013-11-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (grub_mm_check_real): Accept const char *
	as file argument.
