@@ -434,7 +434,11 @@ elif [ x$boot = xemu ]; then
     mkdir -p "$grubdir/locale"
     cp "@builddir@/"unicode.pf2 "$grubdir/fonts/unicode.pf2"
     cp -R "@srcdir@/themes/starfield" "$grubdir/themes/starfield"
-    cp -R "@srcdir@/po/"*.gmo "$grubdir/locale/"
+    for file in "@srcdir@/po/"*.gmo; do
+	if [ -f "$file" ]; then
+	    cp "$file" "$grubdir/locale/"
+	fi
+    done
     cp "${cfgfile}" "$grubdir/grub.cfg"
     cp "${source}" "$grubdir/testcase.cfg"
     @builddir@/grub-core/grub-emu -m "$device_map" -d "$grubdir" | tr -d "\r" | do_trim
